# automaton

./: .gitignore  Automaton.cc  Automaton.h  CMakeLists.txt  README.md  State.cpp  State.h  Transition.cpp  Transition.h  fa.cc  testfa.cc
